- Fixed capital letters getting deleted from query when using "/plugin" install.
- General improvements to "/file" command.
- Fixed broken url for plugin main page when using /plugin" install.
- Minor QOL changes.
- Can now delete plugins that didn't load.
- Reworked internal method handling for errors.
- Checking for dependencies on startup and attempts to resolve them automatically.
- Made automatic dependency resolve occur in multiple threads.
- Fixed bug where played would still have inventory interact events canceled after closing the  "/file" gui.
- Added understandable error messages.