@@ -8,3 +8,4 @@
 - Made automatic dependency resolve occur in multiple threads.
 - Fixed bug where played would still have inventory interact events canceled after closing the  "/file" gui.
 - Added understandable error messages.
+- Added check for an out-of-bounds number input when installing a plugin.
